<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".DeterminantActivity">

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:contentDescription="@string/about"
            android:src="@drawable/ic_dashboard_black_150dp"
            android:scaleType="fitCenter"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:gravity="center"
            android:padding="8dp"
            android:layout_toEndOf="@id/button_back"
            android:background="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:id="@+id/header"
            android:layout_toStartOf="@id/logo"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/button_back"
            android:layout_margin="8dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/about"
            android:src="@drawable/ic_arrow_back_150dp"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_container"
        android:layout_below="@id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/matrix_container"
            android:hint="Non-Zero Determinant Matrix Appears Here"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="24sp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:layout_above="@id/rank_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/rank_container"
            android:gravity="center"
            android:text="@string/text_RANK"
            android:textSize="28sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>