<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".InputActivity">

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="#3f3f3f"
            android:id="@+id/submit"
            android:contentDescription="@string/about"
            android:src="@drawable/ic_dashboard_green_150dp"
            android:scaleType="fitCenter"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:layout_centerVertical="true"
            android:onClick="SubmitClicked"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:gravity="center"
            android:padding="8dp"
            android:layout_toEndOf="@id/button_back"
            android:background="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:id="@+id/header"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="36sp"
            android:layout_toStartOf="@id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/button_back"
            android:layout_margin="8dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/about"
            android:src="@drawable/ic_arrow_back_150dp"
            android:scaleType="fitCenter"
            android:onClick="BackButtonClicked"
            android:background="@android:color/transparent"
            android:layout_width="40dp"
            android:layout_height="30dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_below="@id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/matrix_input_text"
            android:hint="@string/query_element_hint"
            android:textColorHighlight="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:shadowColor="#505050"
            android:importantForAutofill="no"
            android:textColorHint="#656565"
            android:textSize="20sp"
            android:outlineProvider="background"
            android:outlineSpotShadowColor="@color/colorAccent"
            android:outlineAmbientShadowColor="@color/colorAccent"
            android:padding="8dp"
            android:inputType="textLongMessage"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:textColorLink="@color/colorAccent"
            android:layout_toStartOf="@id/button_add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <ImageButton
            android:contentDescription="@string/app_name"
            android:id="@+id/button_add"
            android:src="@drawable/ic_add_black_150dp"
            style="?android:buttonBarButtonStyle"
            android:scaleType="fitCenter"
            android:tint="#FF890A"
            android:onClick="AddRow"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/matrix_container"
            android:layout_above="@id/matrix_input_text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/darker_gray"
            android:hint="Matrix Appears here"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</RelativeLayout>